# rag-room-booking-system

./: README.md  pyproject.toml
frontend/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/assets/: index.css
frontend/src/components/: ApprovalDashboard.tsx  ApprovalDialog.tsx  BookingDrawer.tsx  BookingsTable.tsx  ProtectedRoutes.tsx  StatCard.tsx  StatusBadge.tsx
frontend/src/components/layout/: DashboardLayout.tsx  NotificationPanel.tsx
frontend/src/components/ui/: switch.tsx  tabs.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useBookings.ts  useNotification.ts
frontend/src/lib/: api.ts  booking-utils.ts  jwt.ts
frontend/src/pages/: Index.tsx  Login.tsx
frontend/src/pages/dashboard/: AdminAllBookings.tsx  AdminDashboard.tsx  (+7 more)
frontend/src/types/: booking.ts
scripts/: seed_users.py
src/app/: dependencies.py  main.py
src/app/api/: approvals.py  auth.py  bookings.py  notifications.py  rooms.py  router.py  user.py
src/app/core/: config.py  exceptions.py  mail.py  mail_templates.py  permissions.py  security.py
src/app/db/: session.py
src/app/models/: __init__.py  approval_history.py  audit_log.py  availability_block.py  booking.py  department.py  enums.py  notification.py  room.py  user.py
src/app/repositories/: approval_history.py  base.py  booking.py  notification.py  room.py  user.py
src/app/schemas/: approval.py  auth.py  booking.py  notification.py  room.py  user.py
src/app/services/: approval.py  audit.py  auth.py  booking.py  notification.py
(+2 files in other folders)
